Criando primeiros textos

--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>BoaViagem</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <h1>Bem vindo ao BoaViagem</h1>
+    <p>Somos uma empresa de turismo diferenciada, buscando fornecer uma forma de viver a 
+    vida, aproveitando o que o mundo tem de melhor. Temos milhões de hostels, em parceria com nossa empresa, 
+    onde você troca um dia de trabalho por 3 dias de estadia, oportunidades de freelancy nas cidades
+    ou até mesmo empregos especializados formais de até 6 meses.</p>
+    <p>A missão de BoaViagem é assegurar que a rotina não faça parte do seu cotidiano, é esperar o novo a cada dia...
+    Passar de montanhas à oceanos, estar envolto com as culturas mais distintas e se maravilhar com culinárias únicas.
+    A experiência de nossas acomodações é incrivel, porque você troca dias de trabalho pro hospedagem. Então muitas das
+    pessoas que estão te ajudando na sua estadia, um dia estavam sendo servidos. Isso nos transforma em uma grande família
+    de viajantes pelo mundo! Venha fazer parte!  </p>
+    
+</body>
+</html>
