--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
-<body>
-    <h1>Bem vindo ao BoaViagem</h1>
-    <p>Somos uma empresa de turismo diferenciada, buscando fornecer uma forma de viver a 
-    vida, aproveitando o que o mundo tem de melhor. Temos milhões de hostels, em parceria com nossa empresa, 
-    onde você troca um dia de trabalho por 3 dias de estadia, oportunidades de freelancy nas cidades
+<body style="text-align: center">
+    <h1><strong>Bem vindo ao <em>BoaViagem</em></strong></h1>
+    <p><em>Somos uma empresa de turismo diferenciada, buscando fornecer uma forma de viver a 
+     vida, aproveitando o que o mundo tem de melhor.</em></p>
+
+    <p>Temos milhões de hostels, em parceria com nossa empresa, onde você troca um dia de trabalho por 3 dias de estadia, oportunidades de trabalhos diários nas cidades
     ou até mesmo empregos especializados formais de até 6 meses.</p>
-    <p>A missão de BoaViagem é assegurar que a rotina não faça parte do seu cotidiano, é esperar o novo a cada dia...
+
+    <p>A <strong>missão de <em>BoaViagem</em></strong> é assegurar que a rotina não faça parte do seu cotidiano, é esperar o novo a cada dia...
     Passar de montanhas à oceanos, estar envolto com as culturas mais distintas e se maravilhar com culinárias únicas.
     A experiência de nossas acomodações é incrivel, porque você troca dias de trabalho pro hospedagem. Então muitas das
     pessoas que estão te ajudando na sua estadia, um dia estavam sendo servidos. Isso nos transforma em uma grande família
