--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>BoaViagem</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='style.css'>
     <script src='main.js'></script>
 </head>
-<body style="text-align: center">
+<body>
+   
+    <img class="capa" src="capa.jpg">
+
     <h1><strong>Bem vindo ao <em>BoaViagem</em></strong></h1>
     <p><em>Somos uma empresa de turismo diferenciada, buscando fornecer uma forma de viver a 
      vida, aproveitando o que o mundo tem de melhor.</em></p>
