--- a/index.html
+++ b/index.html
@@ -9,21 +9,50 @@
     <script src='main.js'></script>
 </head>
 <body>
-   
-    <img class="capa" src="capa.jpg">
+    <header>
+        <div class="caixa">
+            <h3><img class="imagem-logo" src="logo.jpg"></h3>
+            <nav class="cabecalho">
+                <a href="Index.html"> Home </a>
+                <a href="Produtos.html"> Produtos </a>
+                <a href="Contatos.html"> Contatos </a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="principal">    
+            <img class="capa" src="capa.jpg">
+            <h1>Bem vindo ao BoaViagem</h1>
+            <p>
+                Somos uma empresa de turismo diferenciada, buscando fornecer uma forma de viver a 
+                vida, aproveitando o que o mundo tem de melhor.
+            </p>
+            <p>
+                Temos milhões de hostels, em parceria com nossa empresa, onde você troca um dia de trabalho por 3 dias 
+                de estadia, oportunidades de trabalhos diários nas cidades
+                ou até mesmo empregos especializados formais de até 6 meses.
+            </p>
+            <p>
+                A missão de BoaViagem é assegurar que a rotina não faça parte do seu cotidiano, é esperar o novo a cada dia...
+                Passar de montanhas à oceanos, estar envolto com as culturas mais distintas e se maravilhar com culinárias únicas.
+                A experiência de nossas acomodações é incrivel, porque você troca dias de trabalho pro hospedagem. Então muitas das
+                pessoas que estão te ajudando na sua estadia, um dia estavam sendo servidos. Isso nos transforma em uma grande
+                família de viajantes pelo mundo! Venha fazer parte!  
+            </p>
+        </section>
+        <section class="beneficios">
+            <h2> Benefícios de ser nosso parceiro: </h2>
+            <ul class="lista-beneficios">
+                <li> Voos promocionais toda semana, exclusivo para membros; </li>
+                <li> Facilitação de documentação necessária para viagens internacionais; </li>
+                <li> Melhores parcerias com hostels, hoteis, pousadas e resorts; </li>
+                <li> Vagas disponíveis para os seis continentes! </li>
+            </ul>
+            <img class="foto-beneficios" src="foto-beneficios.jpg">
+        </section>
+    </main>
+    <footer>
 
-    <h1><strong>Bem vindo ao <em>BoaViagem</em></strong></h1>
-    <p><em>Somos uma empresa de turismo diferenciada, buscando fornecer uma forma de viver a 
-     vida, aproveitando o que o mundo tem de melhor.</em></p>
-
-    <p>Temos milhões de hostels, em parceria com nossa empresa, onde você troca um dia de trabalho por 3 dias de estadia, oportunidades de trabalhos diários nas cidades
-    ou até mesmo empregos especializados formais de até 6 meses.</p>
-
-    <p>A <strong>missão de <em>BoaViagem</em></strong> é assegurar que a rotina não faça parte do seu cotidiano, é esperar o novo a cada dia...
-    Passar de montanhas à oceanos, estar envolto com as culturas mais distintas e se maravilhar com culinárias únicas.
-    A experiência de nossas acomodações é incrivel, porque você troca dias de trabalho pro hospedagem. Então muitas das
-    pessoas que estão te ajudando na sua estadia, um dia estavam sendo servidos. Isso nos transforma em uma grande família
-    de viajantes pelo mundo! Venha fazer parte!  </p>
-    
+    </footer>
 </body>
 </html>
